[gd_scene load_steps=3 format=3 uid="uid://64t6gbok7suj"]

[ext_resource type="Script" path="res://CyberUpgrades/control_category.gd" id="1_ki67e"]
[ext_resource type="PackedScene" uid="uid://cn4hg2ilryw4t" path="res://CyberUpgrades/item.tscn" id="2_83e1f"]

[node name="ControlCategory" type="VBoxContainer"]
mouse_filter = 0
script = ExtResource("1_ki67e")
item = ExtResource("2_83e1f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 0

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
theme_override_font_sizes/font_size = 18

[node name="Items" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 0

[node name="ViewButton" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
text = " View "

[node name="ScrollContainer" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ItemBox" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="MarginContainer/HBoxContainer/ViewButton" to="." method="_on_view_button_pressed"]
